--- a/www/bower.json
+++ b/www/bower.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "ionic": "driftyco/ionic-bower#1.0.0-beta.10",
         "angular-route": "~1.2.x",
-        "angular-cookies": "1.2.17"
+        "angular-cookies": "1.2.17",
+        "angular-gravatar":"0.2.1"
     }
 }
